<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoryActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/uploaded_photo"
        app:layout_constraintBottom_toTopOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_gallery" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="40dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toTopOf="@+id/et_desc"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="188dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_desc"
        app:layout_constraintStart_toStartOf="@+id/et_desc"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>